fixed rendering layout with word-wrap

--- a/src/NoteItem/NoteItem.scss
+++ b/src/NoteItem/NoteItem.scss
@@ -12,6 +12,7 @@ button {
 .render  {
   padding-left: 300px;
   text-align: right;
+  word-wrap: break-word;
 }
 
 .modal {
